k8s_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <app>-svc
  namespace: <namespace>
spec:
  type: LoadBalancer
  selector:
    app: <app_name>
  ports:
  - port: 80
    targetPort: <container_application_port>
    protocol: TCP
