k8s_ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <app>-igrs
  namespace: <namespace>
spec:
  ingressClassName: traefik
  rules:
  - host: <url_with_subdomain>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: <service_name>
            port:
              number: 80
